# irigate-mcp-proxy

./: .gitignore  .gitmodules  AGENTS.md  GITHUB-PAGES.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION.md  MARKET-RESEARCH.md  README.md  pyproject.toml
.github/workflows/: site-check.yml  site-deploy.yml
.hermes/plans/: 2026-07-11_082930-agent-upstream-selection.md  2026-07-11_125835-irigate-astro-landing-page.md  2026-07-11_224817-filesystem-workspace-inputs.md  2026-07-12_085050-explicit-self-restart.md
assets/: AGENTS.md  build_logo.py
docs/: AGENTS.md  MCP-PROXY.md  initial_chat.txt
profiles/: AGENTS.md  benchmark-heavy.yaml  hermes-vc-gateway.yaml  mvp.yaml  smoke-test.yaml
scripts/: AGENTS.md  benchmark.py  compatibility.py
spikes/: AGENTS.md
spikes/001-streamable-http-roundtrip/: README.md  broker.py  echo_server.py  pyproject.toml  verify.py
spikes/002-shared-upstream-state/: README.md  broker.py  crash_server.py  pyproject.toml  stateful_server.py  upstream_worker.py  verify.py
spikes/003-multi-client-compatibility/: README.md  pyproject.toml  verify.py
src/: AGENTS.md
src/irigate/: AGENTS.md  __init__.py  __main__.py  app.py  audit.py  broker.py  config.py  logs.py  migration.py  models.py  (+6 more)
tests/: AGENTS.md  __init__.py  helpers.py  test_audit.py  test_broker.py  test_cli_ps.py  test_config.py  test_isolation.py  test_logs.py  test_migration.py  test_progressive_disclosure.py  test_qualification.py  test_reload.py  test_restart.py  test_routing.py  test_runtime_report.py  test_selection.py  test_shutdown.py  test_transport.py  test_workspace.py
(+5 files in other folders)
